UART as interrupt

--- a/prj.conf
+++ b/prj.conf
@@ -54,6 +54,7 @@ CONFIG_REBOOT=y
 
 CONFIG_UART_ASYNC_API=y
 CONFIG_UART_1_ASYNC=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
 
 # UART debug
 CONFIG_UART_CONSOLE=y
