--- a/prj.conf
+++ b/prj.conf
@@ -23,6 +23,8 @@ CONFIG_LED=y
 CONFIG_LED_PWM=y
 
 CONFIG_SERIAL=y
+# Bluetooth NUS for debugging
+CONFIG_BT_NUS=y
 
 # Non-volatile memory
 CONFIG_FLASH=y
