--- a/prj.conf
+++ b/prj.conf
@@ -22,7 +22,8 @@ CONFIG_I2C=y
 CONFIG_LED=y
 CONFIG_LED_PWM=y
 
-CONFIG_SERIAL=y
+#CONFIG_SERIAL=y
+
 # Bluetooth NUS for debugging
 CONFIG_BT_NUS=y
 
@@ -55,6 +56,7 @@ CONFIG_BT_GATT_READ_MULTIPLE=n
 CONFIG_REBOOT=y
 
 CONFIG_UART_ASYNC_API=y
+CONFIG_UART_0_ASYNC=y
 CONFIG_UART_1_ASYNC=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
 
@@ -64,15 +66,19 @@ CONFIG_CONSOLE=y
 CONFIG_EARLY_CONSOLE=y
 CONFIG_LOG=y
 CONFIG_LOG_BACKEND_UART=y
-# CONFIG_RTT_CONSOLE=y
-# CONFIG_USE_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=n
+CONFIG_USE_SEGGER_RTT=n
 CONFIG_LOG_PRINTK=y
 CONFIG_LOG_MAX_LEVEL=4
-# CONFIG_LOG_BACKEND_RTT_MODE_BLOCK=n
+# CONFIG_LOG_BACKEND_RTT_MODE_BLOCK=y
 
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=8196
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
 
 CONFIG_PM=y
 CONFIG_PM_DEVICE=y
 CONFIG_PM_DEVICE_RUNTIME=y
 CONFIG_CBPRINTF_FP_SUPPORT=y //Enable floating point
+CONFIG_FPU=y
+CONFIG_RING_BUFFER=y
+CONFIG_MAIN_STACK_SIZE=16000
+CONFIG_LOG_BACKEND_RTT_BUFFER_SIZE=4096
